# orbslam3-odometry

./: .gitignore  README.md  esegui_all.sh  full_documentation.md
src/orbslam3_odometry/: CMakeLists.txt  package.xml
src/orbslam3_odometry/config/: basler_stereo_11_05_24_test.yaml  basler_stereo_17_02_24.yaml  orbslam3_odometry.yaml  zed2-stereo.yaml
src/orbslam3_odometry/config/example_config/: basler_stereo_example.yaml  zed2-stereo.yaml
src/orbslam3_odometry/from_matlab_to_opencv/: from_matlab_to_opencv.m
src/orbslam3_odometry/include/orbslam3_odometry/: utility.hpp
src/orbslam3_odometry/launch/: orbslam3-odometry_launch.py  orbslam3_odometry_launch.py
src/orbslam3_odometry/rviz_config/: visualizza_orbslam_e_fastlio.rviz  visualizza_point_cloud.rviz
src/orbslam3_odometry/src/: main_node.cpp  orbslam3_odometry_stereo.cpp  orbslam3_odometry_stereo.hpp  orbslam3_odometry_stereo_node.cpp
src/orbslam3_odometry/src/monocular/: monocular.cpp  monocular.hpp
src/orbslam3_odometry/src/stereo/: just_check_stereo_calibration.cpp  stereo.cpp  stereo.hpp  stereo_rectification.cpp  stereo_rectification.h
